--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,14 @@
     "target": "es2022",
     "module": "es2020",
     "lib": [
-      "es2018", 
+      "es2018",
       "dom"
     ],
+    "paths": {
+      "exceljs": [
+        "node_modules/exceljs/dist/exceljs.min"
+      ]
+    },
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
